--- a/templates/topbar.html
+++ b/templates/topbar.html
@@ -1,3 +1,13 @@
 ﻿<div id="topbar-container">
-    Insert Login info.
+    <div id="topbar-content">
+        <div class="topbar-block alignright">
+            <img src="media/gear.png" />
+        </div>
+        <div class="topbar-block alignright">
+            <img src="media/info.png" ng-click="toggleInfo()" />
+        </div>
+        <div class="topbar-block alignleft">
+            <img src="media/home.png" />
+        </div>
+    </div>
 </div>
