--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,13 @@
 @font-face {
     font-family: mhsFont;
-    src: url(/css/MTCORSVA.TTF);
+    src: url(MTCORSVA.TTF);
 }
 
 #header-container {
     height: 110px;
-    background: url(/css/header.png) repeat-x;
+    background: #FBFDFD url(header.png) repeat-x;
     width: 100%;
-    padding: 20px;
+    padding: 0 0 40px 0;
     text-align: center;
     font-family: mhsFont;
 }
@@ -18,8 +18,26 @@
     height: 38px;
     width: 100%;
 }
+#topbar-content {
+    width: 760px;
+    margin: 0 auto;
+    color: #385560;
+}
+#topbar-content img {
+    height: 34px;
+    width: auto;
+    margin: 2px;
+    border-radius: 50%;
+}
+#topbar-content img:hover {
+    box-shadow: 0 0 5px black, 0 0 2px black;
+}
+.topbar-block {
+    display: inline;
+    margin: 0 5px;
+}
 #body-container {
-    background: #385560 url(/css/panel.png) repeat-x;
+    background: #385560 url(panel.png) repeat-x;
     width: 100%;
 }
 #body-left {
@@ -33,12 +51,12 @@
     border-left: 10px solid #f1f1f1;
 }
 #body-center {
-    width: 65%;
-    min-width: 650px;
+    //width: 65%;
+    width: 760px;
     margin: 0 auto;
-    border: 4px solid lightgrey;
-    background-color: white;
-    padding: 20px;
+    //border: 4px solid lightgrey;
+    //background-color: white;
+    //padding: 20px;
 }
 *[id^="mhs-"] {
     margin: 3px;
@@ -46,34 +64,41 @@
     border: 2px solid black;
 }
 
+#list-sort {
+    //float: right;
+}
+#list-sort img {
+    width: 15px;
+    height: 15px;
+}
+#list-sort img:hover {
+    box-shadow: 0 0 5px black, 0 0 2px black;
+}
+
 .logo {
-    position: absolute;
-    top: 0px;
-    left: 20px;
     height: 100px;
     width: auto;
-    float: left;
 }
 .avatar1 {
-    width: 48px;
-    height: 48px;
+    width: 52px;
+    height: 52px;
     border-radius: 50%;
     border: 1px solid green;
-    box-shadow: 0px 0px 5px green, 0px 0px 2px green;
+    box-shadow: 0px 0px 6px green, 0px 0px 3px green;
 }
 .avatar2 {
-    width: 48px;
-    height: 48px;
+    width: 52px;
+    height: 52px;
     border-radius: 50%;
     border: 1px solid orange;
-    box-shadow: 0px 0px 5px orange, 0px 0px 2px orange;
+    box-shadow: 0px 0px 6px orange, 0px 0px 3px orange;
 }
 .avatar3 {
-    width: 48px;
-    height: 48px;
+    width: 52px;
+    height: 52px;
     border-radius: 50%;
     border: 1px solid red;
-    box-shadow: 0px 0px 5px red, 0px 0px 2px red;
+    box-shadow: 0px 0px 6px red, 0px 0px 3px red;
 }
 .alignright {
     float: right;
@@ -81,38 +106,68 @@
 .alignleft {
     float: left;
 }
+.textright {
+    text-align: right;
+}
 
 #list-container {
-    margin: 0px 15px 5px 15px;
+    margin: 0px 0px 50px 0px;
     padding: 0;
     border: 1px solid #bebdc2;
-    width: 65%;
-    min-width: 450px;
+    //width: 55%;
+    //min-width: 500px;
+    width: 464px;
+    display: inline-block;
 }
-#list-header {
-    border-bottom: 1px solid #bebdc2;
-}
-.list-item {
-    height: 50px;
-    padding: 8px;
+[class^="list-item"] {
     position: relative;
     border-bottom: 1px solid #bebdc2;
     border-top: 1px solid #fff;
     color: #767676;
     background-color: #ecebf0;
-    
+    padding: 8px;
+}
+
+.list-item-header {
+    height: 15px;
+}
+.list-item {
+    min-height: 50px;
+    transition: all 0.3s ease 0s;
+}
+.list-item:hover {
+    box-shadow: inset 0px 0px 15px 0px black, inset 0px 0px 5px 0px black;
+    transition: all 0.3s ease 0s;
+}
+.list-item-select {
+    //background-color: #4b666f;
+    background-color: white;
+    //color: #ecebf0;
+    box-shadow: inset 0px 0px 5px 0px black;
+}
+.list-item-form h3 {
+    margin-top: 0px;
 }
 .list-left {
-    width: 90px;
+    width: 60px;
     float: left;
     vertical-align: middle;
 }
 .list-right {
-    width: 450px;
+    width: auto;
 }
 .list-check {
     display:table-cell;
     vertical-align:middle;
+}
+.list-font {
+    font-size: .85em;
+    padding-left: 5px;
+}
+
+
+#list-status {
+    border: 1px solid #bebdc2;
 }
 
 #footer-container {
@@ -120,7 +175,7 @@
     height: auto;
     margin: 0px;
     font-family: Verdana, Geneva, sans-serif;
-    background: #333;
+    background: #FBFDFD url(footer.png) repeat-x;
     padding: 20px;
 }
 .inner-box {
@@ -132,8 +187,29 @@
     text-align: center;
 }
 
+#info-container {
+    position: absolute;
+    margin: 0;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    background: rgba(0, 0, 0, .8);
+}
+#info-content {
+    width: 50%;
+    height: auto;
+    margin: 20px auto;
+    background-color: white;
+    padding: 20px;
+    border: 4px solid #FBFDFD;
+    opacity: 1;
+     box-shadow: 0px 0px 20px 0px white, 0px 0px 15px 0px white, 0px 0px 10px 0px white, 0px 0px 5px 0px white;
+}
+
 html {
     height: 100%;
+    width: 100%;
 }
 
 body {
