--- a/templates/header.html
+++ b/templates/header.html
@@ -1,7 +1,7 @@
 <div id="header-container">
-    <img class="logo" src="media/MHS_Logo_nowhite.png">
     <div class="inner-box">
-        <h1>Mountainland Head Start, Inc.</h1>
+        <img class="logo" src="media/MHS_Logo_nowhite.png">
+        <img style="height: 90px" src="media/textlogo.png" />
     </div>
    
 </div>
